--- a/SpringMiniProject/src/main/webapp/WEB-INF/web.xml
+++ b/SpringMiniProject/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
            <filter-name>encodingFilter</filter-name>
            <url-pattern>/*</url-pattern>
      </filter-mapping>
-
+<!-- 집에 언제가노 -->
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
